fix for header ad on mobile device

--- a/drupal/sites/all/themes/tp4/sass/modules/_header.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_header.scss
@@ -17,6 +17,14 @@ header{
       margin-bottom: 1.5em;
     }
   }
+  .leaderboard{
+    @include breakpoint($breakpoint-mobile){
+      display: none;
+    }
+    @include breakpoint($breakpoint-tablet){
+      display: block;
+    }
+  }
   @include breakpoint($breakpoint-mobile){
     .menu-toggle{
       display: block;
